2011-05-19  Ulrich Drepper  <drepper@gmail.com>

	* libio/freopen.c (freopen): Use __dup2, not dup2.
	* libio/freopen64.c (freopen64): Likewise.

2011-05-17  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #12775]
	* sysdeps/x86_64/fpu/e_powl.S: Fix a typo.
	* math/Makefile (tests): Add test-powl.
	(CFLAGS-test-powl.c): Define.
	* math/test-powl.c: New file.

2011-05-16  H.J. Lu  <hongjiu.lu@intel.com>

	* fileops.c (_IO_new_file_fopen): Get fd from _IO_fileno.

2011-05-17  Ulrich Drepper  <drepper@gmail.com>

	[BZ #11837]
	* iconvdata/gb18030.c: Update to GB18020-2005.

2011-05-16  Ulrich Drepper  <drepper@gmail.com>

	* posix/regex.h (RE_SYNTAX_AWK, RE_SYNTAX_GNU_AWK,
	RE_SYNTAX_POSIX_AWK): Update to match recent development.
	Patch by Aharon Robbins <arnold@skeeve.com>.

	[BZ #11892]
	* stdlib/putenv.c (putenv): Don't always create copy of the variable
	on the stack.

	[BZ #11895]
	* misc/pselect.c (__pselect): Handle timeout value errors hidden
	through underflows.

	[BZ #12766]
	* misc/error.c (error_at_line): Ensure file_name and old_file_name
	point to strings before performing equality test for error_one_per_line
	mode.

	[BZ #11697]
	* login/programs/pt_chown.c (do_pt_chown): Always call chown.

	[BZ #11820]
	* sysdeps/unix/sysv/linux/x86_64/sys/user.h
	(struct user_fpregs_struct): Avoid __uint*_t types.

	[BZ #6420]
	* malloc/mtrace.c (tr_where): Add additional parameter to point to
	symbol info.  Use it instead of calling _dl_addr locally.
	(lock_and_info): New function.
	(tr_freehook): Call lock_and_info and pass symbol info as additional
	parameter to tr_where.
	(tr_mallochook): Likewise.
	(tr_reallochook): Likewise.
	(tr_memalignhook): Likewise.

	* malloc/mtrace.c: Remove support for USE_MTRACE_FILE.  It is not
	used and couldn't be at all thread-safe.

2011-05-15  Ulrich Drepper  <drepper@gmail.com>

	* libio/freopen.c (freopen): Don't close old file descriptor
	before the new one is opened.  Instead dup the new file descriptor